--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,14 +12,14 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="/">kyopro</a>
+			<a class="navbar-brand" href="/kyopro">kyopro</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 				<div class="navbar-nav">
-					<a href="/contests" class="nav-link active">Contests</a>
-					<a href="/" class="nav-link disabled">DISABLED</a>
+					<a href="/kyopro/contests" class="nav-link active">Contests</a>
+					<a href="/kyopro" class="nav-link disabled">DISABLED</a>
 				</div>
 			</div>
 		</div>
