--- a/templates/app/contests/index.html
+++ b/templates/app/contests/index.html
@@ -14,12 +14,12 @@
 		<tbody>
 		<tr>
 			<td>2025-04-13 12:00</td>
-			<td><a href="/contests/abc351">AtCoder Beginner Contest 351</a></td>
+			<td><a href="/kyopro/contests/abc351">AtCoder Beginner Contest 351</a></td>
 			<td>100 min</td>
 		</tr>
 		<tr>
 			<td>2025-04-20 12:00</td>
-			<td><a href="/contests/arc161">AtCoder Regular Contest 161</a></td>
+			<td><a href="/kyopro/contests/arc161">AtCoder Regular Contest 161</a></td>
 			<td>120 min</td>
 		</tr>
 		</tbody>
@@ -37,7 +37,7 @@
 		<tbody>
 		<tr class="table-success">
 			<td>2025-04-06 11:00</td>
-			<td><a href="/contests/abc350">AtCoder Beginner Contest 350</a></td>
+			<td><a href="/kyopro/contests/abc350">AtCoder Beginner Contest 350</a></td>
 			<td>100 min</td>
 		</tr>
 		</tbody>
@@ -55,17 +55,17 @@
 		<tbody>
 		<tr>
 			<td>2025-03-30 11:00</td>
-			<td><a href="/contests/abc349">AtCoder Beginner Contest 349</a></td>
+			<td><a href="/kyopro/contests/abc349">AtCoder Beginner Contest 349</a></td>
 			<td>100 min</td>
 		</tr>
 		<tr>
 			<td>2025-03-23 11:00</td>
-			<td><a href="/contests/arc160">AtCoder Regular Contest 160</a></td>
+			<td><a href="/kyopro/contests/arc160">AtCoder Regular Contest 160</a></td>
 			<td>120 min</td>
 		</tr>
 		<tr>
 			<td colspan="3" class="text-end">
-			<a href="/contests/archive">→ Past Contests</a>
+			<a href="/kyopro/contests/archive">→ Past Contests</a>
 			</td>
 		</tr>
 		</tbody>
