--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -7,13 +7,13 @@
 			<div class="col-md-8">
 				<h2>Recent Contests</h2>
 				<div class="list-group">
-					<a href="/contests/abc350" class="list-group-item list-group-item-action">
+					<a href="/kyopro/contests/abc350" class="list-group-item list-group-item-action">
 						ABC350 - April 5, 2025
 					</a>
-					<a href="/contests/abc349" class="list-group-item list-group-item-action">
+					<a href="/kyopro/contests/abc349" class="list-group-item list-group-item-action">
 						ABC349 - March 29, 2025
 					</a>
-					<a href="/contests/arc160" class="list-group-item list-group-item-action">
+					<a href="/kyopro/contests/arc160" class="list-group-item list-group-item-action">
 						ARC160 - March 22, 2025
 					</a>
 				</div>
