--- a/templates/app/contests/abc/abc400/index.html
+++ b/templates/app/contests/abc/abc400/index.html
@@ -8,19 +8,19 @@
   <!-- コンテスト内ナビゲーション -->
   <ul class="nav nav-tabs mt-4 mb-3">
     <li class="nav-item">
-      <a class="nav-link active" href="/kyopro/kyopro/contests/abc400">Overview</a>
+      <a class="nav-link active" href="/kyopro/contests/abc400">Overview</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/kyopro/kyopro/contests/abc400/tasks">Tasks</a>
+      <a class="nav-link" href="/kyopro/contests/abc400/tasks">Tasks</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/kyopro/kyopro/contests/abc400/submit">Submit</a>
+      <a class="nav-link" href="/kyopro/contests/abc400/submit">Submit</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/kyopro/kyopro/contests/abc400/standings">Standings</a>
+      <a class="nav-link" href="/kyopro/contests/abc400/standings">Standings</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/kyopro/kyopro/contests/abc400/editorial">Editorial</a>
+      <a class="nav-link" href="/kyopro/contests/abc400/editorial">Editorial</a>
     </li>
   </ul>
 
